--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-ADD target/demo-0.0.1-SNAPSHOT.jar demo-0.0.1-SNAPSHOT.jar
+ADD demo-0.0.1-SNAPSHOT.jar demo-0.0.1-SNAPSHOT.jar
 EXPOSE 8085
-ENTRYPOINT ["java","-jar","-Dserver.port=8087","target/demo-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","-Dserver.port=8087","demo-0.0.1-SNAPSHOT.jar"]
